Bug 977725 - MLS Geolocation seeding GONK GPS Provider. r=kanru