dom/system/gonk/GonkGPSGeolocationProvider.cpp
@@ -26,6 +26,7 @@
 #include "nsServiceManagerUtils.h"
 #include "nsThreadUtils.h"
 #include "nsContentUtils.h"
+#include "prtime.h"
 
 #ifdef MOZ_B2G_RIL
 #include "nsIDOMIccInfo.h"
@@ -98,6 +99,7 @@ GonkGPSGeolocationProvider::LocationCallback(GpsLocation* location)
     NS_IMETHOD Run() {
       nsRefPtr<GonkGPSGeolocationProvider> provider =
         GonkGPSGeolocationProvider::GetSingleton();
+      provider->mLastGPSDerivedLocationTime = PR_Now();
       nsCOMPtr<nsIGeolocationUpdate> callback = provider->mLocationCallback;
       if (callback) {
         callback->Update(mPosition);
@@ -285,8 +287,8 @@ GonkGPSGeolocationProvider::GonkGPSGeolocationProvider()
   : mStarted(false)
   , mSupportsScheduling(false)
 #ifdef MOZ_B2G_RIL
-  , mSupportsMSB(false) 
-  , mSupportsMSA(false) 
+  , mSupportsMSB(false)
+  , mSupportsMSA(false)
 #endif
   , mSupportsSingleShot(false)
   , mSupportsTimeInjection(false)
@@ -523,7 +525,28 @@ GonkGPSGeolocationProvider::SetReferenceLocation()
     }
   }
 }
+
 #endif // MOZ_B2G_RIL
+
+void
+GonkGPSGeolocationProvider::InjectLocation(double latitude,
+                                           double longitude,
+                                           float accuracy)
+{
+#ifdef DEBUG_GPS
+  printf_stderr("*** injecting location\n");
+  printf_stderr("*** lat: %f\n", latitude);
+  printf_stderr("*** lon: %f\n", longitude);
+  printf_stderr("*** accuracy: %f\n", accuracy);
+#endif
+
+  MOZ_ASSERT(NS_IsMainThread());
+  if (!mGpsInterface) {
+    return;
+  }
+
+  mGpsInterface->inject_location(latitude, longitude, accuracy);
+}
 
 void
 GonkGPSGeolocationProvider::Init()
@@ -626,6 +649,49 @@ GonkGPSGeolocationProvider::SetupAGPS()
 }
 #endif // MOZ_B2G_RIL
 
+
+NS_IMPL_ISUPPORTS1(GonkGPSGeolocationProvider::NetworkLocationUpdate,
+                   nsIGeolocationUpdate)
+
+NS_IMETHODIMP
+GonkGPSGeolocationProvider::NetworkLocationUpdate::Update(nsIDOMGeoPosition *position)
+{
+  nsRefPtr<GonkGPSGeolocationProvider> provider =
+    GonkGPSGeolocationProvider::GetSingleton();
+
+  nsCOMPtr<nsIDOMGeoPositionCoords> coords;
+  position->GetCoords(getter_AddRefs(coords));
+  if (!coords) {
+    return NS_ERROR_FAILURE;
+  }
+
+  // if we haven't seen anything from the GPS device for 1s,
+  // use this network derived location.
+  int64_t diff = PR_Now() - provider->mLastGPSDerivedLocationTime;
+  if (provider->mLocationCallback && diff > kDefaultPeriod) {
+    provider->mLocationCallback->Update(position);
+  }
+
+  double lat, lon, acc;
+  coords->GetLatitude(&lat);
+  coords->GetLongitude(&lon);
+  coords->GetAccuracy(&acc);
+  provider->InjectLocation(lat, lon, acc);
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+GonkGPSGeolocationProvider::NetworkLocationUpdate::LocationUpdatePending()
+{
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+GonkGPSGeolocationProvider::NetworkLocationUpdate::NotifyError(uint16_t error)
+{
+  return NS_OK;
+}
+
 NS_IMETHODIMP
 GonkGPSGeolocationProvider::Startup()
 {
@@ -643,6 +709,16 @@ GonkGPSGeolocationProvider::Startup()
   mInitThread->Dispatch(NS_NewRunnableMethod(this, &GonkGPSGeolocationProvider::Init),
                         NS_DISPATCH_NORMAL);
 
+  mNetworkLocationProvider = do_CreateInstance("@mozilla.org/geolocation/mls-provider;1");
+  if (mNetworkLocationProvider) {
+    nsresult rv = mNetworkLocationProvider->Startup();
+    if (NS_SUCCEEDED(rv)) {
+      nsRefPtr<NetworkLocationUpdate> update = new NetworkLocationUpdate();
+      mNetworkLocationProvider->Watch(update);
+    }
+  }
+
+  mLastGPSDerivedLocationTime = 0;
   mStarted = true;
   return NS_OK;
 }
@@ -665,6 +741,7 @@ GonkGPSGeolocationProvider::Shutdown()
     return NS_OK;
   }
   mStarted = false;
+  mNetworkLocationProvider = nullptr;
 
 #ifdef MOZ_B2G_RIL
   if (mRadioInterface) {
