browser/app/profile/firefox.js
@@ -1369,6 +1369,11 @@ pref("dom.debug.propagate_gesture_events_through_content", false);
 
 // The request URL of the GeoLocation backend.
 pref("geo.wifi.uri", "https://www.googleapis.com/geolocation/v1/geolocate?key=%GOOGLE_API_KEY%");
+#ifdef RELEASE_BUILD
+pref("geo.wifi.logging.enabled", false);
+#else
+pref("geo.wifi.logging.enabled", true);
+#endif
 
 // Necko IPC security checks only needed for app isolation for cookies/cache/etc:
 // currently irrelevant for desktop e10s
